--- a/package.json
+++ b/package.json
@@ -83,11 +83,14 @@
     "peity": "^3.3.0",
     "perfect-scrollbar": "^1.4.0",
     "popper.js": "^1.15.0",
+    "prop-types": "^15.7.2",
     "quill": "^1.3.6",
     "raphael": "^2.2.7",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
+    "react-vis": "^1.11.7",
     "select2": "^4.0.6-rc.1",
     "spectrum-colorpicker": "^1.8.0",
     "typicons.font": "^2.0.9"
