--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@fortawesome/fontawesome-free": "^5.3.1",
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
