--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "build:dev": "webpack --env.mode development --open --hot",
     "build:prod": "webpack --env.mode production",
     "start:dev": "webpack-dev-server --env.mode development --open --hot",
-    "start:prod": "node server.js",
-    "start": "node server.js",
+    "start:prod": "yarn build && node server.js",
+    "start": "yarn build && node server.js",
     "webpack": "webpack",
     "lint": "yarn eslint . --ext .js,.jsx, --fix"
   },
